SERVER-58464 Permit interruption errors when aborting a time-series batch that has already been aborted